fix taille card + overflow-x

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,7 +10,8 @@
   font-style: normal;
 }
 
-body {
+body,
+html {
   overflow-x: hidden;
-  width : 100vw;
+  width: 100vw;
 }
